Add style.css and "svg" to page

--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE HTML>
 <html>
   <header>
-    <script src="./lib/d3/d3.min.js"></script>
-    <script src="app.js"></script>
+    <title>D3.ather</title>
+    <link rel="stylesheet" type="text/css" href="style/style.css">
   </header>
   <body>
+    <script src="./lib/d3/d3.min.js"></script>
+    <script src="app.js"></script>
     <div id="app">
     </div>
   </body>
