Test circle transforms on svg

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <link rel="stylesheet" type="text/css" href="style/style.css">
   </header>
   <body>
-    <script src="./lib/d3/d3.min.js"></script>
+    <script src="./lib/node_modules/underscore/underscore-min.js"></script>
+    <script src="./lib/node_modules/d3/d3.min.js"></script>
     <script src="app.js"></script>
     <div id="app">
     </div>
