Add color and opacity transitions to pie sections

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <header>
     <title>D3.ather</title>
     <link rel="stylesheet" type="text/css" href="style/style.css">
+    <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
   </header>
   <body>
     <script src="./api-key/api-key.js"></script>
